fixed footer alignment

--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -50,7 +50,7 @@
 }
 
 .section-title {
-    margin-top: 200px;
+    margin-top: 300px;
 }
 
 .sec-para {
